# PulseRoom

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  room.py
app/core/: config.py  rate_limit.py  redis.py  security.py
app/db/: session.py
app/models/: message.py  room.py  room_member.py  user.py
app/presence/: redis_presence.py  typing.py
app/pubsub/: publisher.py  subscriber.py
app/schemas/: room.py  user.py
app/services/: message_service.py  room_service.py  user_service.py
app/static/: chat.html  index.html  style.css
app/websockets/: auth.py
migrations/: env.py
migrations/versions/: 5f062efa3a70_create_users_table.py  860f3ac1c74e_create_messages_table.py  9dfdd4d3b3b5_create_tables_rooms_and_room_members.py
tests/: conftest.py  test_app_factory.py  test_auth.py  test_room.py  test_websocket.py  test_ws.py
